--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "start": "cross-env NODE_ENV=production arc sandbox"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^5.5.4",
+    "@mantine/core": "^5.5.4",
+    "@mantine/dates": "^5.5.4",
+    "@mantine/dropzone": "^5.5.4",
+    "@mantine/ds": "^5.5.4",
+    "@mantine/form": "^5.5.4",
+    "@mantine/hooks": "^5.5.4",
+    "@mantine/modals": "^5.5.4",
+    "@mantine/notifications": "^5.5.4",
+    "@mantine/nprogress": "^5.5.4",
+    "@mantine/prism": "^5.5.4",
+    "@mantine/remix": "^5.5.4",
+    "@mantine/rte": "^5.5.4",
+    "@mantine/spotlight": "^5.5.4",
     "@remix-run/architect": "^1.7.2",
     "@remix-run/node": "^1.7.2",
     "@remix-run/react": "^1.7.2",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.5",
+    "embla-carousel-react": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
